--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+aniso8601==3.0.2
+bson==0.5.6
+click==6.7
+dnspython==1.15.0
 Flask==1.0.1
 Flask-API==1.0
 Flask-Compress==1.4.0
 Flask-Cors==3.0.2
 Flask-RESTful==0.3.6
 flask-restplus==0.10.1
+functools32==3.2.3.post2
+gunicorn==19.9.0
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+MarkupSafe==1.0
+pymongo==3.7.1
+python-dateutil==2.7.3
+pytz==2018.5
+six==1.11.0
+Werkzeug==0.14.1
