--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
 MarkupSafe==1.0
+PyJWT==1.6.4
 pymongo==3.7.1
 python-dateutil==2.7.3
 pytz==2018.5
