--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aniso8601==3.0.2
 bson==0.5.6
+certifi==2018.8.24
+chardet==3.0.4
 click==6.7
 dnspython==1.15.0
 Flask==1.0.1
@@ -9,14 +11,21 @@ Flask-Cors==3.0.2
 Flask-RESTful==0.3.6
 flask-restplus==0.10.1
 functools32==3.2.3.post2
+gevent==1.3.6
+greenlet==0.4.15
+grequests==0.3.0
 gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
+jsondiff==1.1.2
 jsonschema==2.6.0
 MarkupSafe==1.0
 PyJWT==1.6.4
 pymongo==3.7.1
 python-dateutil==2.7.3
 pytz==2018.5
+requests==2.19.1
 six==1.11.0
+urllib3==1.23
 Werkzeug==0.14.1
